# Personal-OS-Project

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
acpi/src/: lib.rs
arch/: Cargo.toml
arch/src/: lib.rs  x86_64.rs
bootloader/: Cargo.toml
bootloader/src/: font.rs  lib.rs  main.rs
firmware/aarch64/: shell.efi
firmware/ia32/: code.fd  shell.efi
firmware/riscv64/: shell.efi
firmware/x64/: shell.efi  vars.fd
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs
uefi/: Cargo.toml
uefi/src/: allocator.rs  chars.rs  lib.rs  memory.rs  protocols.rs  services.rs  status.rs  strings.rs  tables.rs
uefi/src/protocols/: acpi.rs  debug.rs  file.rs  graphics.rs  image.rs  path.rs  serial.rs  string.rs  text.rs
