[package]
name = "operating_system"
version = "0.1.0"
edition = "2024"
default-run = "print_paths"

[workspace]
members = [ "bootloader", "kernel", "acpi", "arch", "uefi" ]
# resolver = "3"

[profile.dev]

[profile.release]
incremental = true
strip = true

[dependencies]

[target.'cfg(target_arch = "x86_64")'.build-dependencies]
bootloader = { path = "bootloader", artifact = "bin", target = "x86_64-unknown-uefi" }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

# [target.'cfg(target_arch = "aarch64")'.build-dependencies]
# bootloader = { path = "bootloader", artifact = "bin", target = "aarch64-unknown-uefi" }
# kernel = { path = "kernel", artifact = "bin", target = "aarch64-unknown-none" }
